# FFStudio

./: .gitignore  README.md  ROADMAP.md  build_log.txt  index.html
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audiocraft_impl.rs  comfy_impl.rs  ffmpeg_impl.rs  files_impl.rs  main.rs  prompt_gen.rs  sd_impl.rs  vcclient_impl.rs  video_impl.rs  whisper_impl.rs
src-tauri/src/commands/: audiocraft.rs  comfy.rs  ffmpeg.rs  files.rs  mod.rs  prompt_gen.rs  sd.rs  vcclient.rs  video_gen.rs  whisper.rs
src-tauri/src/models/: common.rs  mod.rs  sd.rs  video.rs
src-tauri/src/utils/: encoding.rs  fs_paths.rs  mod.rs  process.rs
src/components/: AudioTab.jsx  BatchTab.jsx  DownloadTab.jsx  FramesTab.jsx  GifWebpTab.jsx  ImageTab.jsx  MediaTab.jsx  MergeTab.jsx  MusicTab.jsx  PromptGenPanel.jsx  RealtimeVoiceTab.jsx  Settings.jsx  Sidebar.jsx  SubtitlesTab.jsx  TrimTab.jsx  VideoGenTab.jsx  VideoTab.jsx  VoiceTab.jsx  shared.jsx
