[package]
name = "ffstudio"
version = "0.1.0"
description = "MediaKit — FFmpeg GUI"
authors = []
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
once_cell = "1.19"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rand = "0.8"
image = { version = "0.24", features = ["png"] }
chrono = { version = "0.4", features = ["clock"] }
tokio-tungstenite = "0.23"
[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
